--- a/SMPC-2019.html
+++ b/SMPC-2019.html
@@ -199,56 +199,61 @@
                 </div>
                 </div>
             </div>    
-        <div id="main2" >
-        <style type="text/css">
-	table.tableizer-table {
-		font-size: 20px;
-		border: 1px solid #CCC; 
-		font-family: Arial, Helvetica, sans-serif;
-	} 
-	.tableizer-table td {
-		padding: 4px;
-		margin: 3px;
-		border: 1px solid #CCC;
-	}
-	.tableizer-table th {
-		background-color: #104E8B; 
-		color: #FFF;
-		font-weight: bold;
-		
-	}
-</style>
-<table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th>&nbsp;&nbsp;Data</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Time</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Report</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Invited&nbsp;Speaker</th></tr></thead><tbody>
- <tr><td>6月1日</td><td>&nbsp;7:30 - 8:30</td><td>论坛注册</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;8:30 - 8:45</td><td>论坛合影</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;8:45 - 9:00</td><td>Opening & Welcome</td><td>Zhan Qin & Bingsheng Zhang</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;9:00 - 9:50</td><td>A brief introduction to secure multiparty computation</td><td>Chaoping Xing</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;9:50 - 10:40</td><td>The Techniques of Secure Computation in Big Data</td><td>Zhenfu Cao</td></tr>
- <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>11:10 - 12:00</td><td>Into the New Privacy Era: Hardware Assisted Large-Scale Secure Computing</td><td>Xiaofeng Wang</td></tr>
- <tr><td>&nbsp;</td><td>12:00 - 14:00</td><td>Lunch</td><td></td></tr>
- <tr><td>&nbsp;</td><td>14:00 - 14:50</td><td>Communication-efficient federated learning</td><td>Yaochu Jin</td></tr>
- <tr><td>&nbsp;</td><td>14:50 - 15:40</td><td>End-to-Same-End Encryption: Designing Modular, Efficient, and Portable Blind Cloud Storage</td><td>Qiang Tang</td></tr>
- <tr><td>&nbsp;</td><td>15:40 - 16:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>16:10 - 17:00</td><td>Practical Quantum Private Query</td><td>Fei Gao</td></tr>
- <tr><td>&nbsp;</td><td>18:00 - 20:00</td><td>Dinner</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
- <tr><td>6月2日</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;9:00 - 9:50</td><td>TPM and its host platform - a special case of two-party computation</td><td>Liqun Chen</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;9:50 - 10:40</td><td>Leakage Deterring Authenticated Secret Sharing and Application to Secure Cloud Computing
-</td><td>Qiuliang Xu</td></tr>
- <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>14:50 - 15:40</td><td>分布式共识机制</td><td>Lei Wang</td></tr>
- <tr><td>&nbsp;</td><td>12:00 - 14:00</td><td>Lunch</td><td></td></tr>
- <tr><td>&nbsp;</td><td>14:00 - 14:50</td><td>Card-based Majority Voting Protocols with Three Inputs Using Three Cards</td><td>Kazuo Ohta</td></tr>
- <tr><td>&nbsp;</td><td>11:10 - 12:00</td><td>Cloud-assisted Secure Computing for IoT</td><td>Bo Luo</td></tr>
-	
- <tr><td>&nbsp;</td><td>15:40 - 16:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>16:10 - 17:00</td><td>Efficient Secure String-Comparison from Custom Garbing</td><td>Yan Huang</td></tr>
- <tr><td>&nbsp;</td><td>18:00 - 20:00</td><td>Dinner</td><td></td></tr>
-</tbody></table>
-	    </br></br>
+        		               <div id="main3" >
+		                    <style type="text/css">
+		                        table.tableizer-table {
+		                            border: 1px solid #CCC;
+		                            font-family: Arial, Helvetica, sans-serif;
+					    margin: 1px;
+		                        }
+		                        .tableizer-table td {
+		                            padding: 4px;
+		                            margin: 3px;
+		                            max-width: 500px;
+		                            border: 1px solid #CCC;
+		                        }
+		                        .tableizer-table th {
+		                            background-color: #104E8B;
+		                            padding: 4px;
+		                            margin: 3px;
+		                            max-width: 500px;
+		                            color: #FFF;
+		                            font-weight: bold;
+		                            text-align: center;
+		                        }
+		                    </style>
+		                    <table class="tableizer-table" style="margin-top: -60px;text-align: center;">
+		                        <thead><tr class="tableizer-firstrow"><th>&nbsp;&nbsp;Data</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Time</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Report</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Invited&nbsp;Speaker</th></tr></thead><tbody>
+		                         <tr><td>6月1日</td><td>&nbsp;7:30 - 8:30</td><td>论坛注册</td><td>&nbsp;</td></tr>
+		                         <tr><td>&nbsp;</td><td>&nbsp;8:30 - 8:45</td><td>论坛合影</td><td>&nbsp;</td></tr>
+		                         <tr><td>&nbsp;</td><td>&nbsp;8:45 - 9:00</td><td>Opening & Welcome</td><td>Zhan Qin & Bingsheng Zhang</td></tr>
+		                         <tr><td>&nbsp;</td><td>&nbsp;9:00 - 9:50</td><td>A brief introduction to secure multiparty computation</td><td>Chaoping Xing</td></tr>
+		                         <tr><td>&nbsp;</td><td>&nbsp;9:50 - 10:40</td><td>The Techniques of Secure Computation in Big Data</td><td>Zhenfu Cao</td></tr>
+		                         <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
+		                         <tr><td>&nbsp;</td><td>11:10 - 12:00</td><td>Into the New Privacy Era: Hardware Assisted Large-Scale Secure Computing</td><td>Xiaofeng Wang</td></tr>
+		                         <tr><td>&nbsp;</td><td>12:00 - 14:00</td><td>Lunch</td><td></td></tr>
+		                         <tr><td>&nbsp;</td><td>14:00 - 14:50</td><td>Communication-efficient federated learning</td><td>Yaochu Jin</td></tr>
+		                         <tr><td>&nbsp;</td><td>14:50 - 15:40</td><td>End-to-Same-End Encryption: Designing Modular, Efficient, and Portable Blind Cloud Storage</td><td>Qiang Tang</td></tr>
+		                         <tr><td>&nbsp;</td><td>15:40 - 16:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
+		                         <tr><td>&nbsp;</td><td>16:10 - 17:00</td><td>Practical Quantum Private Query</td><td>Fei Gao</td></tr>
+		                         <tr><td>&nbsp;</td><td>18:00 - 20:00</td><td>Dinner</td><td>&nbsp;</td></tr>
+		                         <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+		                         <tr><td>6月2日</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+		                         <tr><td>&nbsp;</td><td>&nbsp;9:00 - 9:50</td><td>TPM and its host platform - a special case of two-party computation</td><td>Liqun Chen</td></tr>
+		                         <tr><td>&nbsp;</td><td>&nbsp;9:50 - 10:40</td><td>Leakage Deterring Authenticated Secret Sharing and Application to Secure Cloud Computing
+		                        </td><td>Qiuliang Xu</td></tr>
+		                         <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
+		                         <tr><td>&nbsp;</td><td>14:50 - 15:40</td><td>分布式共识机制</td><td>Lei Wang</td></tr>
+		                         <tr><td>&nbsp;</td><td>12:00 - 14:00</td><td>Lunch</td><td></td></tr>
+		                         <tr><td>&nbsp;</td><td>14:00 - 14:50</td><td>Card-based Majority Voting Protocols with Three Inputs Using Three Cards</td><td>Kazuo Ohta</td></tr>
+		                         <tr><td>&nbsp;</td><td>11:10 - 12:00</td><td>Cloud-assisted Secure Computing for IoT</td><td>Bo Luo</td></tr>
+		                        	
+		                         <tr><td>&nbsp;</td><td>15:40 - 16:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
+		                         <tr><td>&nbsp;</td><td>16:10 - 17:00</td><td>Efficient Secure String-Comparison from Custom Garbing</td><td>Yan Huang</td></tr>
+		                         <tr><td>&nbsp;</td><td>18:00 - 20:00</td><td>Dinner</td><td></td></tr>
+		                        </tbody></table>
+		                        	    </br></br>
+
        <div id="main2" >
         <div id="register">
             <table class="table">
