--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -190,7 +190,9 @@
                         table.tableizer-table {
                             border: 1px solid #CCC;
                             font-family: Arial, Helvetica, sans-serif;
-			    margin: 1px;
+			    margin: 0 auto;
+			    width: 100px;
+			    height: 100px;
                         }
                         .tableizer-table td {
                             padding: 4px;
@@ -208,7 +210,7 @@
                             text-align: center;
                         }
                     </style>
-                    <table class="tableizer-table" style="margin-top: -60px; text-align: center;">
+                    <table class="tableizer-table" style="margin-top: -60px;">
                         <thead><tr class="tableizer-firstrow"><th>时间</th><th colspan="3">会议报到</th></tr></thead>
                         <tbody>
                         <tr><td>08月28日<br></td><td colspan="3">会议报到&nbsp;&nbsp;腾讯网络会议室</td></tr>
