--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -191,8 +191,8 @@
                             border: 1px solid #CCC;
                             font-family: Arial, Helvetica, sans-serif;
 			    margin: 0 auto;
-			    width: 100px;
-			    height: 100px;
+			    width: 100%;
+			    height: 100%;
                         }
                         .tableizer-table td {
                             padding: 4px;
