--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -107,16 +107,16 @@
                     <p align="center">林&emsp;聪&emsp;张&emsp;兰&emsp;郭富春&emsp;罗聪余&emsp;蒙威志<br/></p>
                     <p align="center">付安民&emsp;田海博&emsp;黎&emsp;琳&emsp;付章杰&emsp;李&emsp;剑<br/></p>
                     <br/>
-                    <p align="center">会议举办时间：2020年08月29日-08月31日。<br/></p>
-                    <p align="center">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
-                    <p align="center">会议注册费用：注册费1500元人民币/人。<br/></p>
-                    <p align="center">注册费缴纳：&nbsp户名：湖南淇朗德信息科技有限公司； <br/></p>
-                    <p align="center" style="text-indent:7em;">开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
-                    <p align="center" style="text-indent:7em;">账号：5937 7522 7413。<br/></p>
-                    <p align="center" style="text-indent:7em;">缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
-                    <p align="center">会议举办地点：中国 网络视频会议。<br/></p>
-                    <p align="center">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
-                    <p align="center">会议报告地点：腾讯会议网络会议室。<br/></p>
+                    <p style="margin-left: 25%;">会议举办时间：2020年08月29日-08月31日。<br/></p>
+                    <p style="margin-left: 25%;">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
+                    <p style="margin-left: 25%;">会议注册费用：注册费1500元人民币/人。<br/></p>
+                    <p style="margin-left: 25%;">注册费缴纳：&nbsp户名：湖南淇朗德信息科技有限公司； <br/></p>
+                    <p style="margin-left: 25%; text-indent:7em;">开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
+                    <p style="margin-left: 25%; text-indent:7em;">账号：5937 7522 7413。<br/></p>
+                    <p style="margin-left: 25%; text-indent:7em;">缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
+                    <p style="margin-left: 25%;">会议举办地点：中国 网络视频会议。<br/></p>
+                    <p style="margin-left: 25%;">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
+                    <p style="margin-left: 25%;">会议报告地点：腾讯会议网络会议室。<br/></p>
                 </div>
 
                 <div id="contents" class="personnel2">
@@ -138,16 +138,16 @@
                     <p align="center">林&emsp;聪&emsp;张&emsp;兰&emsp;郭富春&emsp;罗聪余&emsp;蒙威志<br/></p>
                     <p align="center">付安民&emsp;田海博&emsp;黎&emsp;琳&emsp;付章杰&emsp;李&emsp;剑<br/></p>
                     <br/>
-                    <p align="center">会议举办时间：2020年08月29日-08月31日。<br/></p>
-                    <p align="center">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
-                    <p align="center">会议注册费用：注册费1500元人民币/人。<br/></p>
-                    <p align="center">注册费缴纳：&nbsp户名：湖南淇朗德信息科技有限公司； <br/></p>
-                    <p align="center" style="text-indent:7em;">开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
-                    <p align="center" style="text-indent:7em;">账号：5937 7522 7413。<br/></p>
-                    <p align="center" style="text-indent:7em;">缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
-                    <p align="center">会议举办地点：中国 网络视频会议。<br/></p>
-                    <p align="center">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
-                    <p align="center">会议报告地点：腾讯会议网络会议室。<br/></p>
+                    <p style="margin-left: 25%;">会议举办时间：2020年08月29日-08月31日。<br/></p>
+                    <p style="margin-left: 25%;">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
+                    <p style="margin-left: 25%;">会议注册费用：注册费1500元人民币/人。<br/></p>
+                    <p style="margin-left: 25%;">注册费缴纳：&nbsp户名：湖南淇朗德信息科技有限公司； <br/></p>
+                    <p style="margin-left: 25%; text-indent:7em;">开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
+                    <p style="margin-left: 25%; text-indent:7em;">账号：5937 7522 7413。<br/></p>
+                    <p style="margin-left: 25%; text-indent:7em;">缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
+                    <p style="margin-left: 25%;">会议举办地点：中国 网络视频会议。<br/></p>
+                    <p style="margin-left: 25%;">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
+                    <p style="margin-left: 25%;">会议报告地点：腾讯会议网络会议室。<br/></p>
                 </div>
 
                 <div id="contents" class="personnel3">
@@ -174,16 +174,16 @@
                     <p align="center">林&emsp;聪&emsp;张&emsp;兰&emsp;郭富春&emsp;罗聪余&emsp;蒙威志<br/></p>
                     <p align="center">付安民&emsp;田海博&emsp;黎&emsp;琳&emsp;付章杰&emsp;李&emsp;剑<br/></p>
                     <br/>
-                    <p align="center">会议举办时间：2020年08月29日-08月31日。<br/></p>
-                    <p align="center">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
-                    <p align="center">会议注册费用：注册费1500元人民币/人。<br/></p>
-                    <p align="center">注册费缴纳：&emsp;户名：湖南淇朗德信息科技有限公司； <br/></p>
-                    <p align="center" style="text-indent:7em;">开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
-                    <p align="center" style="text-indent:7em;">账号：5937 7522 7413。<br/></p>
-                    <p align="center" style="text-indent:7em;">缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
-                    <p align="center">会议举办地点：中国 网络视频会议。<br/></p>
-                    <p align="center">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
-                    <p align="center">会议报告地点：腾讯会议网络会议室。<br/></p>
+                    <p style="margin-left: 25%;">会议举办时间：2020年08月29日-08月31日。<br/></p>
+                    <p style="margin-left: 25%;">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
+                    <p style="margin-left: 25%;">会议注册费用：注册费1500元人民币/人。<br/></p>
+                    <p style="margin-left: 25%;">注册费缴纳：&nbsp户名：湖南淇朗德信息科技有限公司； <br/></p>
+                    <p style="margin-left: 25%; text-indent:7em;">开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
+                    <p style="margin-left: 25%; text-indent:7em;">账号：5937 7522 7413。<br/></p>
+                    <p style="margin-left: 25%; text-indent:7em;">缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
+                    <p style="margin-left: 25%;">会议举办地点：中国 网络视频会议。<br/></p>
+                    <p style="margin-left: 25%;">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
+                    <p style="margin-left: 25%;">会议报告地点：腾讯会议网络会议室。<br/></p>
                 </div>
                 <div id="main3" >
                     <style type="text/css">
