--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -191,7 +191,9 @@
                         table.tableizer-table {
                             border: 1px solid #CCC;
                             font-family: Arial, Helvetica, sans-serif;
-			    margin: 1px;
+			    margin: 0 auto;
+			    width: 80%;
+		            height: 100%;
                         }
                         .tableizer-table td {
                             padding: 4px;
@@ -209,7 +211,7 @@
                             text-align: center;
                         }
                     </style>
-                    <table class="tableizer-table" style="margin-top: -85px;text-align: center;">
+                    <table class="tableizer-table" style="margin-top: -85px;">
                         <thead><tr class="tableizer-firstrow"><th>时间</th><th colspan="3">会议报到</th></tr></thead>
                         <tbody>
                         <tr><td>09月20日<br>14:00 - 18:00</td><td colspan="3">论坛注册及报到&nbsp;&nbsp;杭州中赢铂金皇冠假日酒店一楼大堂</td></tr>
