--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -31,6 +31,9 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
+	.section{
+		margin: 25px;
+	    }
 	   
 	</style>
 </head>
@@ -105,6 +108,7 @@
                          <p align="center">杜晓妮 闫统江 郭富春 刘哲理 蒙威志  张兰 于佳 罗博<br/></p>  
                      <p align="center">李洪伟 王高丽 付安民 田海博 潘彦斌  黎琳 李剑 丁勇<br/></p>
                     <br/>
+		 <div class="section">
                     <p align="left">会议举办时间：2019年09月21日-09月22日。<br/></p>
                     <p align="left">会议报到时间：2019年09月20日14:30-18:00，杭州中赢铂金皇冠假日酒店一楼大堂。<br/></p>
                     <p align="left">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。注册费缴纳：<br/></p>
@@ -116,6 +120,7 @@
                     <p align="left">会议承办单位：北京航空航天大学 网络空间安全学院<br/></p>
                     <p align="left">会议协办单位：杭州安恒信息技术股份有限公司、杭州数梦工场科技有限公司和杭州天谷信息科技有限公司。<br/></p>
                     <p align="left">会议报告地点：北京航空航天大学 杭州研究院 报告厅（浙江省杭州市滨江区创慧街18号）。<br/></p>  
+			</div>
                                         </div>
 
  <div id="contents" class="personnel2">
@@ -139,6 +144,7 @@
           <p align="center">杜晓妮 闫统江 郭富春 刘哲理 蒙威志  张兰 于佳 罗博<br/></p>  
       <p align="center">李洪伟 王高丽 付安民 田海博 潘彦斌  黎琳 李剑 丁勇<br/></p>
      <br/>
+	 <div class="section">
      <p align="left">会议举办时间：2019年09月21日-09月22日。<br/></p>
      <p align="left">会议报到时间：2019年09月20日14:30-18:00，杭州中赢铂金皇冠假日酒店一楼大堂。<br/></p>
      <p align="left">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。注册费缴纳：<br/></p>
@@ -150,7 +156,8 @@
      <p align="left">会议承办单位：北京航空航天大学 网络空间安全学院<br/></p>
      <p align="left">会议协办单位：杭州安恒信息技术股份有限公司、杭州数梦工场科技有限公司和杭州天谷信息科技有限公司。<br/></p>
      <p align="left">会议报告地点：北京航空航天大学 杭州研究院 报告厅（浙江省杭州市滨江区创慧街18号）。<br/></p>  
-                         </div>
+                        </div>
+	 </div>
  <div id="contents" class="personnel3">
      <p class="organization">会议组委会(排名不分先后顺序)<br/></p>
      <p align="center">来学嘉&nbsp&nbsp&nbsp王杰&nbsp&nbsp&nbsp裴定一 陈克非 吴文玲 杨义先 温巧燕 谷大武 林东岱&nbsp&nbsp&nbsp李晖&nbsp&nbsp&nbsp毛文波<br/></p>
@@ -172,6 +179,7 @@
           <p align="center">杜晓妮 闫统江 郭富春 刘哲理 蒙威志  张兰 于佳 罗博<br/></p>  
       <p align="center">李洪伟 王高丽 付安民 田海博 潘彦斌  黎琳 李剑 丁勇<br/></p>
      <br/>
+	 <div class="section">
      <p align="left">会议举办时间：2019年09月21日-09月22日。<br/></p>
      <p align="left">会议报到时间：2019年09月20日14:30-18:00，杭州中赢铂金皇冠假日酒店一楼大堂。<br/></p>
      <p align="left">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。注册费缴纳：<br/></p>
@@ -184,6 +192,7 @@
      <p align="left">会议协办单位：杭州安恒信息技术股份有限公司、杭州数梦工场科技有限公司和杭州天谷信息科技有限公司。<br/></p>
      <p align="left">会议报告地点：北京航空航天大学 杭州研究院 报告厅（浙江省杭州市滨江区创慧街18号）。<br/></p>  
                          </div>
+	 </div>
                 </div>   
             </div>    
 <div id="main3" >
