--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -111,7 +111,8 @@
 		 <div class="section">
                     <p align="left">会议举办时间：2019年09月21日-09月22日。<br/></p>
                     <p align="left">会议报到时间：2019年09月20日14:30-18:00，杭州中赢铂金皇冠假日酒店一楼大堂。<br/></p>
-                    <p align="left">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。注册费缴纳：<br/></p>
+                    <p align="left">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。<br/></p>
+		    <p align="left">注册费缴纳：<br/></p>
                     <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：杭州畅游会展服务有限公司；开户行：杭州联合银行祥符支行；账号： <br/></p>
                     <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp2010 0015 9260 415。缴费时请您注明以下信息：单位、姓名和单位统一<br/></p>
                     <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp社会信用代码。<br/></p>
@@ -147,7 +148,8 @@
 	 <div class="section">
      <p align="left">会议举办时间：2019年09月21日-09月22日。<br/></p>
      <p align="left">会议报到时间：2019年09月20日14:30-18:00，杭州中赢铂金皇冠假日酒店一楼大堂。<br/></p>
-     <p align="left">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。注册费缴纳：<br/></p>
+     <p align="left">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。<br/></p>
+     <p align="left">注册费缴纳：<br/></p>
      <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：杭州畅游会展服务有限公司；开户行：杭州联合银行祥符支行；账号： <br/></p>
      <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp2010 0015 9260 415。缴费时请您注明以下信息：单位、姓名和单位统一<br/></p>
      <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp社会信用代码。<br/></p>
@@ -182,7 +184,8 @@
 	 <div class="section">
      <p align="left">会议举办时间：2019年09月21日-09月22日。<br/></p>
      <p align="left">会议报到时间：2019年09月20日14:30-18:00，杭州中赢铂金皇冠假日酒店一楼大堂。<br/></p>
-     <p align="left">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。注册费缴纳：<br/></p>
+     <p align="left">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。<br/></p>
+     <p align="left">注册费缴纳：<br/></p>
      <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：杭州畅游会展服务有限公司；开户行：杭州联合银行祥符支行；账号： <br/></p>
      <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp2010 0015 9260 415。缴费时请您注明以下信息：单位、姓名和单位统一<br/></p>
      <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp社会信用代码。<br/></p>
