--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -115,7 +115,7 @@
 		    <p align="left">注册费缴纳：<br/></p>
                     <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：杭州畅游会展服务有限公司；<br/></p>
                     <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp开户行：杭州联合银行祥符支行；<br/></p>
-                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：2010 0015 9260 415。<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：2010 0015 9260 415；<br/></p>
                     <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp缴费时请您注明以下信息：单位、姓名和单位统一社会信用代码。<br/></p>
                     <p align="left">会议举办地点：北京航空航天大学杭州研究院（浙江省杭州市滨江区创慧街18号）。<br/></p>
                     <p align="left">会议住宿酒店：杭州中赢铂金皇冠假日酒店一楼大堂（杭州市滨江区春晓路61号）。<br/></p>
@@ -153,7 +153,7 @@
      <p align="left">注册费缴纳：<br/></p>
      <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：杭州畅游会展服务有限公司；<br/></p>
      <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp开户行：杭州联合银行祥符支行；<br/></p>
-     <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：2010 0015 9260 415。<br/></p>
+     <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：2010 0015 9260 415；<br/></p>
      <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp缴费时请您注明以下信息：单位、姓名和单位统一社会信用代码。<br/></p>
      <p align="left">会议举办地点：北京航空航天大学杭州研究院（浙江省杭州市滨江区创慧街18号）。<br/></p>
      <p align="left">会议住宿酒店：杭州中赢铂金皇冠假日酒店一楼大堂（杭州市滨江区春晓路61号）。<br/></p>
@@ -190,7 +190,7 @@
      <p align="left">注册费缴纳：<br/></p>
      <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：杭州畅游会展服务有限公司；<br/></p>
      <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp开户行：杭州联合银行祥符支行；<br/></p>
-     <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：2010 0015 9260 415。<br/></p>
+     <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：2010 0015 9260 415；<br/></p>
      <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp缴费时请您注明以下信息：单位、姓名和单位统一社会信用代码。<br/></p>
      <p align="left">会议举办地点：北京航空航天大学杭州研究院（浙江省杭州市滨江区创慧街18号）。<br/></p>
      <p align="left">会议住宿酒店：杭州中赢铂金皇冠假日酒店一楼大堂（杭州市滨江区春晓路61号）。<br/></p>
