--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -32,7 +32,7 @@
 			display:block;
 		}
 	 .section{
-		 margin: 25%;
+		 margin: 22%;
 	    }
 	</style>
 </head>
@@ -113,10 +113,11 @@
                     <p align="left">会议举办时间：2020年08月29日-08月31日。<br/></p>
                     <p align="left">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
                     <p align="left">会议注册费用：注册费1500元人民币/人。<br/></p>
-                    <p align="left">注册费缴纳：&nbsp户名：湖南淇朗德信息科技有限公司； <br/></p>
-                    <p align="left" text-indent:7em;>开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
-                    <p align="left" text-indent:7em;>账号：5937 7522 7413。<br/></p>
-                    <p align="left" text-indent:7em;>缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
+                    <p align="left">注册费缴纳：<br/></p>
+		    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：湖南淇朗德信息科技有限公司；<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：5937 7522 7413<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
                     <p align="left">会议举办地点：中国 网络视频会议。<br/></p>
                     <p align="left">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
                     <p align="left">会议报告地点：腾讯会议网络会议室。<br/></p>
@@ -145,10 +146,11 @@
                     <p align="left">会议举办时间：2020年08月29日-08月31日。<br/></p>
                     <p align="left">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
                     <p align="left">会议注册费用：注册费1500元人民币/人。<br/></p>
-                    <p align="left">注册费缴纳：&nbsp户名：湖南淇朗德信息科技有限公司； <br/></p>
-                    <p align="left" text-indent:7em;>开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
-                    <p align="left" text-indent:7em;>账号：5937 7522 7413。<br/></p>
-                    <p align="left" text-indent:7em;>缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
+                   <p align="left">注册费缴纳：<br/></p>
+		    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：湖南淇朗德信息科技有限公司；<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：5937 7522 7413<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
                     <p align="left">会议举办地点：中国 网络视频会议。<br/></p>
                     <p align="left">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
                     <p align="left">会议报告地点：腾讯会议网络会议室。<br/></p>
@@ -183,10 +185,11 @@
                     <p align="left">会议举办时间：2020年08月29日-08月31日。<br/></p>
                     <p align="left">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
                     <p align="left">会议注册费用：注册费1500元人民币/人。<br/></p>
-                    <p align="left">注册费缴纳：&nbsp户名：湖南淇朗德信息科技有限公司； <br/></p>
-                    <p align="left" text-indent:7em;>开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
-                    <p align="left" text-indent:7em;>账号：5937 7522 7413。<br/></p>
-                    <p align="left" text-indent:7em;>缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
+                    <p align="left">注册费缴纳：<br/></p>
+		    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：湖南淇朗德信息科技有限公司；<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：5937 7522 7413<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
                     <p align="left">会议举办地点：中国 网络视频会议。<br/></p>
                     <p align="left">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
                     <p align="left">会议报告地点：腾讯会议网络会议室。<br/></p>
