--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -89,10 +89,10 @@
             <div id="main2">
                 <div id="contents" class="personnel1">
                     <p align="center" class="organization">会议组委会(排名不分先后顺序)<br/></p>
-                    <p align="center">来学嘉&nbsp&nbsp王&emsp;杰&nbsp&nbsp裴定一&nbsp&nbsp陈克非&nbsp&nbsp吴文玲&nbsp&nbsp杨义先&nbsp&nbsp温巧燕&nbsp&nbsp谷大武&nbsp&nbsp林东岱&nbsp&nbspbsp李晖&nbsp&nbsp&nbsp毛文波<br/></p>
-                    <p align="center">冯荣权&nbsp&nbsp戚文峰&nbsp&nbsp张卫明&nbsp&nbsp马建峰&nbsp&nbsp徐茂智&nbsp&nbsp刘胜利&nbsp&nbsp张方国&nbsp&nbsp徐秋亮&nbsp&nbsp张福泰 &nbsp李凤华&nbsp&nbsp&nbsp杨波&nbsp&nbsp&nbsp&nbsp<br/></p> 
-                    <p align="center">任&emsp;奎&nbsp&nbsp胡&emsp;磊&nbsp&nbsp许春香&nbsp&nbsp唐韶华&nbsp&nbsp&nbsp郑&emsp;东&nbsp&nbsp&nbsp王良民&nbsp&nbsp李丽香&nbsp&nbsp赵波&nbsp&nbsp&nbsp&nbsp&nbsp吴铤&nbsp&nbsp&nbsp&nbsp祝烈煌 &nbsp路荣幸 <br/></p> 
-                    <p align="center">王美琴&nbsp&nbsp翁&emsp;健&nbsp&nbsp陈晓峰&nbsp&nbsp伍前红&nbsp&nbsp黄欣沂&nbsp&nbsp孔凡玉&nbsp&nbsp吕继强&nbsp&nbsp刘&emsp;哲&nbsp&nbsp&nbsp屈龙江 &nbsp&nbsp石文昌&nbsp&nbsp&nbsp&nbsp禹勇&nbsp&nbsp&nbsp&nbsp <br/></p>
+                    <p align="center">来学嘉&nbsp&nbsp王&emsp;杰&nbsp&nbsp裴定一&nbsp&nbsp陈克非&nbsp&nbsp吴文玲&nbsp&nbsp杨义先&nbsp&nbsp温巧燕&nbsp&nbsp谷大武&nbsp&nbsp林东岱&nbsp&nbsp李&emsp;晖&nbsp&nbsp毛文波<br/></p>
+                    <p align="center">冯荣权&nbsp&nbsp戚文峰&nbsp&nbsp张卫明&nbsp&nbsp马建峰&nbsp&nbsp徐茂智&nbsp&nbsp刘胜利&nbsp&nbsp张方国&nbsp&nbsp徐秋亮&nbsp&nbsp张福泰&nbsp&nbsp李凤华&nbsp&nbsp杨&emsp;波<br/></p> 
+                    <p align="center">任&emsp;奎&nbsp&nbsp胡&emsp;磊&nbsp&nbsp许春香&nbsp&nbsp唐韶华&nbsp&nbsp&nbsp郑&emsp;东&nbsp&nbsp王良民&nbsp&nbsp李丽香&nbsp&nbsp赵&emsp;波&nbsp&nbsp吴&emsp;铤&nbsp&nbsp祝烈煌&nbsp&nbsp路荣幸<br/></p> 
+                    <p align="center">王美琴&nbsp&nbsp翁&emsp;健&nbsp&nbsp陈晓峰&nbsp&nbsp伍前红&nbsp&nbsp黄欣沂&nbsp&nbsp孔凡玉&nbsp&nbsp吕继强&nbsp&nbsp刘&emsp;哲&nbsp&nbsp屈龙江&nbsp&nbsp石文昌&nbsp&nbsp禹&emsp;勇<br/></p>
                     <br/><br/>
                     <p align="center" class="organization">会议主席<br/></p>
                     <!--                        蒋林智（University of Surrey）林璟锵<br/><br/>-->
@@ -164,10 +164,10 @@
 	 </div>
  <div id="contents" class="personnel3">
      <p class="organization">会议组委会(排名不分先后顺序)<br/></p>
-     <p align="center">来学嘉&nbsp&nbsp&nbsp王杰&nbsp&nbsp&nbsp裴定一 陈克非 吴文玲 杨义先 温巧燕 谷大武 林东岱&nbsp&nbsp&nbsp李晖&nbsp&nbsp&nbsp毛文波<br/></p>
-     <p align="center">&nbsp&nbsp&nbsp冯荣权 戚文峰&nbsp&nbsp张卫明 马建峰 徐茂智 刘胜利 张方国 徐秋亮 &nbsp张福泰 &nbsp李凤华&nbsp&nbsp&nbsp杨波&nbsp&nbsp&nbsp&nbsp<br/></p> 
-     <p align="center">&nbsp&nbsp任奎&nbsp&nbsp&nbsp&nbsp胡磊&nbsp&nbsp&nbsp&nbsp许春香 &nbsp唐韶华&nbsp&nbsp&nbsp郑东&nbsp&nbsp&nbsp王良民 李丽香&nbsp&nbsp赵波&nbsp&nbsp&nbsp&nbsp&nbsp吴铤&nbsp&nbsp&nbsp&nbsp祝烈煌 &nbsp路荣幸 <br/></p> 
-     <p align="center">&nbsp&nbsp&nbsp&nbsp王美琴&nbsp&nbsp&nbsp&nbsp翁健&nbsp&nbsp&nbsp陈晓峰 伍前红 黄欣沂 孔凡玉 吕继强&nbsp&nbsp&nbsp刘哲&nbsp&nbsp&nbsp屈龙江 &nbsp&nbsp石文昌&nbsp&nbsp&nbsp&nbsp禹勇&nbsp&nbsp&nbsp&nbsp <br/></p>
+     <p align="center">来学嘉&nbsp&nbsp王&emsp;杰&nbsp&nbsp裴定一&nbsp&nbsp陈克非&nbsp&nbsp吴文玲&nbsp&nbsp杨义先&nbsp&nbsp温巧燕&nbsp&nbsp谷大武&nbsp&nbsp林东岱&nbsp&nbsp李&emsp;晖&nbsp&nbsp毛文波<br/></p>
+     <p align="center">冯荣权&nbsp&nbsp戚文峰&nbsp&nbsp张卫明&nbsp&nbsp马建峰&nbsp&nbsp徐茂智&nbsp&nbsp刘胜利&nbsp&nbsp张方国&nbsp&nbsp徐秋亮&nbsp&nbsp张福泰&nbsp&nbsp李凤华&nbsp&nbsp杨&emsp;波<br/></p> 
+     <p align="center">任&emsp;奎&nbsp&nbsp胡&emsp;磊&nbsp&nbsp许春香&nbsp&nbsp唐韶华&nbsp&nbsp郑&emsp;东&nbsp&nbsp王良民&nbsp&nbsp李丽香&nbsp&nbsp赵&emsp;波&nbsp&nbsp吴&emsp;铤&nbsp&nbsp祝烈煌&nbsp&nbsp路荣幸<br/></p> 
+     <p align="center">王美琴&nbsp&nbsp翁&emsp;健&nbsp&nbsp陈晓峰&nbsp&nbsp伍前红&nbsp&nbsp黄欣沂&nbsp&nbsp孔凡玉&nbsp&nbsp吕继强&nbsp&nbsp刘&emsp;哲&nbsp&nbsp屈龙江&nbsp&nbsp石文昌&nbsp&nbsp禹&emsp;勇<br/></p>
      <br/><br/>
      <p align="center" class="organization">会议主席<br/></p>
      <!--                        蒋林智（University of Surrey）林璟锵<br/><br/>-->
