--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -91,7 +91,7 @@
                     <p align="center" class="organization">会议组委会(排名不分先后顺序)<br/></p>
                     <p align="center">来学嘉&nbsp&nbsp王&emsp;杰&nbsp&nbsp裴定一&nbsp&nbsp陈克非&nbsp&nbsp吴文玲&nbsp&nbsp杨义先&nbsp&nbsp温巧燕&nbsp&nbsp谷大武&nbsp&nbsp林东岱&nbsp&nbsp李&emsp;晖&nbsp&nbsp毛文波<br/></p>
                     <p align="center">冯荣权&nbsp&nbsp戚文峰&nbsp&nbsp张卫明&nbsp&nbsp马建峰&nbsp&nbsp徐茂智&nbsp&nbsp刘胜利&nbsp&nbsp张方国&nbsp&nbsp徐秋亮&nbsp&nbsp张福泰&nbsp&nbsp李凤华&nbsp&nbsp杨&emsp;波<br/></p> 
-                    <p align="center">任&emsp;奎&nbsp&nbsp胡&emsp;磊&nbsp&nbsp许春香&nbsp&nbsp唐韶华&nbsp&nbsp&nbsp郑&emsp;东&nbsp&nbsp王良民&nbsp&nbsp李丽香&nbsp&nbsp赵&emsp;波&nbsp&nbsp吴&emsp;铤&nbsp&nbsp祝烈煌&nbsp&nbsp路荣幸<br/></p> 
+                    <p align="center">任&emsp;奎&nbsp&nbsp胡&emsp;磊&nbsp&nbsp许春香&nbsp&nbsp唐韶华&nbsp&nbsp郑&emsp;东&nbsp&nbsp王良民&nbsp&nbsp李丽香&nbsp&nbsp赵&emsp;波&nbsp&nbsp吴&emsp;铤&nbsp&nbsp祝烈煌&nbsp&nbsp路荣幸<br/></p> 
                     <p align="center">王美琴&nbsp&nbsp翁&emsp;健&nbsp&nbsp陈晓峰&nbsp&nbsp伍前红&nbsp&nbsp黄欣沂&nbsp&nbsp孔凡玉&nbsp&nbsp吕继强&nbsp&nbsp刘&emsp;哲&nbsp&nbsp屈龙江&nbsp&nbsp石文昌&nbsp&nbsp禹&emsp;勇<br/></p>
                     <br/><br/>
                     <p align="center" class="organization">会议主席<br/></p>
@@ -180,8 +180,8 @@
  	<p align="center">关振宇 李大伟 （北京航空航天大学）<br/></p>
  	<br/>
      <p align="center" class="organization">会议程序委员会<br/></p>
-          <p align="center">杜晓妮 闫统江 郭富春 刘哲理 蒙威志  张兰 于佳 罗博<br/></p>  
-      <p align="center">李洪伟 王高丽 付安民 田海博 潘彦斌  黎琳 李剑 丁勇<br/></p>
+          <p align="center">杜晓妮&nbsp&nbsp闫统江&nbsp&nbsp郭富春&nbsp&nbsp刘哲理&nbsp&nbsp蒙威志&nbsp&nbsp张&emsp;兰&nbsp&nbsp于&emsp;佳&nbsp&nbsp罗&emsp;博<br/></p>  
+      <p align="center">李洪伟&nbsp&nbsp王高丽&nbsp&nbsp付安民&nbsp&nbsp田海博&nbsp&nbsp潘彦斌&nbsp&nbsp黎&emsp;琳&nbsp&nbsp李&emsp;剑&nbsp&nbsp丁&emsp;勇<br/></p>
      <br/>
 	 <div class="section">
      <p align="left">会议举办时间：2019年09月21日-09月22日。<br/></p>
