--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -34,7 +34,9 @@
 	.section{
 		margin: 25px;
 	    }
-	   
+	 #theme{
+		margin-top: 20px;
+	}
 	</style>
 </head>
 
@@ -226,7 +228,7 @@
                             text-align: center;
                         }
                     </style>
-                    <table class="tableizer-table" style="margin-top: -85px;">
+                    <table class="tableizer-table" style="margin-top: -80px;">
                         <thead><tr class="tableizer-firstrow"><th>时间</th><th colspan="3">会议报到</th></tr></thead>
                         <tbody>
                         <tr><td>09月20日<br>14:00 - 18:00</td><td colspan="3">论坛注册及报到&nbsp;&nbsp;杭州中赢铂金皇冠假日酒店一楼大堂</td></tr>
