--- a/SHDI-2019.html
+++ b/SHDI-2019.html
@@ -34,6 +34,16 @@
 	.section{
 		margin: 0 25%;
 	}
+	.footer4
+	    {
+		    margin-top:10px;
+	    }
+	.removeborder{ 
+		border: none
+		}
+	#theme{
+		margin-top: 20px;
+	}
 	</style>
 </head>
 
